# SaaS_CRM

./: .gitignore
.github/workflows/: ci.yml
src/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytests.ini
src/.github/workflows/: ci.yml
src/app/: celery.py  settings.py  urls.py
src/contacts/: api.py  middleware.py  models.py  tasks.py
src/contacts/management/commands/: create_schema.py
src/contacts/migrations/: 0001_initial.py  0002_contact.py
src/tests/: test_api.py
